# dynamicdns-rupdater

./: Cargo.toml  README.md  build_x86.sh
src/: main.rs
