[package]
name = "dynamicdns-rupdater"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
